2008-02-05  Brian Warner  <warner@lothar.com>

	* buildbot/buildslave.py (BuildSlave._missing_timer_fired): add a
	To: header to the email message we're composing. Oops. Thanks
	to Zandr Milewski for the catch.
	* buildbot/test/test_slaves.py (BuildSlave.test_mail_on_missing):
	test for it

2007-12-31  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_transfer.py (Upload.testLotsOfBlocks): remove
	the short timeouts, these can cause false test failures on slow
	systems, and were only needed while developing the recent patch
	(Download.testLotsOfBlocks): same

	* buildbot/scripts/reconfig.py (Reconfigurator.run): if we're on
	windows, make 'buildbot reconfig' emit a warning message (since
	there's no SIGHUP to be had) rather than just hanging. Addresses
	#105, but we still need to document this somewhere. Thanks to
	Ben Hearsum for the patch.

	* buildbot/slave/commands.py (SlaveFileUploadCommand.start):
	rewrite the main loop to avoid tail recursion, since Deferreds
	don't optimize those out. Without this, at the end of the transfer
	we'd hit a stack depth of about two or three frames per block
	transferred, and for large transfers this would run into a "stack
	depth exceeded" error. Closes #106.
	(SlaveFileDownloadCommand.start): same, for downloads.
	* buildbot/test/test_transfer.py (Upload.testLotsOfBlocks): test it
	(Download.testLotsOfBlocks): same

2007-12-22  Brian Warner  <warner@lothar.com>

	* buildbot/steps/shell.py (TreeSize): This never worked properly.
	Fix it. Also, stash the tree size in a build property named
	'tree-size-kb'. Note that this records size in KiB (1024 bytes),
	not KB (1000 bytes), because that's what du will give us. This
	closes #47.
	* docs/buildbot.texinfo (TreeSize): document it
	* buildbot/test/test_steps.py (TreeSize.testTreeSize): test it

	* buildbot/steps/shell.py (WarningCountingShellCommand): utility
	subclass which uses a regular expression to count warning messages